<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForeCastActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="5dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nameid"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/lugar"
                android:textSize="22dp"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/hoy"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/daytemp"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/temperatura"
                android:textSize="18dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/dayCond"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/pronostico"
                    android:textSize="18dp"
                    />
                <ImageView
                    android:id="@+id/dayimageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:adjustViewBounds="true"
                    />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/day1"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/ma_ana"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/day1temp"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/temperatura"
                android:textSize="18dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/day1Cond"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/pronostico"
                    android:textSize="18dp"
                    />
                <ImageView
                    android:id="@+id/day1imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:id="@+id/day2"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:text="@string/pasado_ma_ana"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/day2temp"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/temperatura"
                android:textSize="18dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/day2Cond"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/pronostico"
                    android:textSize="18dp"
                    />
                <ImageView
                    android:id="@+id/day2imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:adjustViewBounds="true"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>